fix innerHTML bug caused by ql-align

--- a/frontend/src/components/content-editor/content-editor.style.less
+++ b/frontend/src/components/content-editor/content-editor.style.less
@@ -17,11 +17,13 @@
 
 .content-editor {
   height: 80%;
-  min-height: 80%;
-  padding-top: 3em;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
 
+  button {
+    margin-top: 1rem;
+  }
   .ql-toolbar {
     width: 100%;
     border-top-left-radius: 0.5em;
